<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/main_appbar_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#388E3C"
        android:gravity="bottom"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:padding="16dp" />

    <TextView
        android:id="@+id/sector_1_pink"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="#E91E63"
        android:onClick="onClickSectorPinkDetails"
        android:text="@string/sector_1"
        app:layout_constraintBottom_toTopOf="@+id/sector_3_green"
        app:layout_constraintEnd_toStartOf="@+id/sector_2_deep_purple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/sector_2_deep_purple"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#673AB7"
        android:onClick="onClickSectorDeepPurpleDetails"
        android:text="@string/sector_2"
        app:layout_constraintBottom_toTopOf="@+id/sector_4_amber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sector_1_pink"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/sector_3_green"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="#4CAF50"
        android:onClick="onClickSectorGreenDetails"
        android:text="@string/sector_3"
        app:layout_constraintBottom_toTopOf="@+id/sector_5_orange"
        app:layout_constraintEnd_toStartOf="@+id/sector_4_amber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sector_1_pink" />

    <TextView
        android:id="@+id/sector_4_amber"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#FFC107"
        android:onClick="onClickSectorAmberDetails"
        android:text="@string/sector_4"
        app:layout_constraintBottom_toTopOf="@+id/sector_6_deep_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sector_3_green"
        app:layout_constraintTop_toBottomOf="@+id/sector_2_deep_purple" />

    <TextView
        android:id="@+id/sector_5_orange"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="#FF9800"
        android:onClick="onClickSectorOrangeDetails"
        android:text="@string/sector_5"
        app:layout_constraintBottom_toTopOf="@+id/sector_7_purple"
        app:layout_constraintEnd_toStartOf="@+id/sector_6_deep_orange"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sector_3_green" />

    <TextView
        android:id="@+id/sector_6_deep_orange"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="#FF5722"
        android:onClick="onClickSectorDeepOrangeDetails"
        android:text="@string/sector_6"
        app:layout_constraintBottom_toTopOf="@+id/sector_8_indigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sector_5_orange"
        app:layout_constraintTop_toBottomOf="@+id/sector_4_amber" />

    <TextView
        android:id="@+id/sector_7_purple"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="#9C27B0"
        android:onClick="onClickSectorPurpleDetails"
        android:text="@string/sector_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sector_8_indigo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sector_5_orange" />

    <TextView
        android:id="@+id/sector_8_indigo"
        style="@style/Sector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        android:onClick="onClickSectorIndigoDetails"
        android:text="@string/sector_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sector_7_purple"
        app:layout_constraintTop_toBottomOf="@+id/sector_6_deep_orange" />
</android.support.constraint.ConstraintLayout>