<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_size"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:gravity="bottom" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/main_appbar_desc"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/appbar_size"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/tiny_margin"
            android:layout_weight="1"
            android:background="@color/colorZone1Primary"
            android:elevation="@dimen/card_elevation"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone1Primary"
                android:text="@string/sector_1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone1Primary"
                android:text="@string/sector_1_desc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/tiny_margin"
            android:layout_weight="1"
            android:background="@color/colorZone2Primary"
            android:elevation="@dimen/card_elevation"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone2Primary"
                android:text="@string/sector_2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone2Primary"
                android:text="@string/sector_2_desc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/tiny_margin"
            android:layout_weight="1"
            android:background="@color/colorZone3Primary"
            android:elevation="@dimen/card_elevation"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone3Primary"
                android:text="@string/sector_3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorZone3Primary"
                android:text="@string/sector_3_desc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
